Updating the profile

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="white">#f8f8f6</color>
     <color name="blue">#103a5c</color>
     <color name="yellow">#f9b42a</color>
-    <color name="darkblue">601c2c</color>
+    <color name="darkblue">#601c2c</color>
 
 </resources>
