--- a/app/src/main/res/layout/dialog_confirmation.xml
+++ b/app/src/main/res/layout/dialog_confirmation.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/your_app_logo"
+        android:src="@drawable/logo"
         android:layout_marginBottom="16dp"/>
 
     <TextView
