--- a/app/src/main/res/layout/food_list_view.xml
+++ b/app/src/main/res/layout/food_list_view.xml
@@ -164,7 +164,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#FFC107"
+        android:backgroundTint="@color/yellow"
         android:text="@string/edit"
         android:textColor="@color/black"
         android:paddingStart="60dp"
