--- a/app/src/main/res/layout/update_profile.xml
+++ b/app/src/main/res/layout/update_profile.xml
@@ -53,8 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:background="@drawable/rounded_button_white"
-            android:inputType="@string/text_name"
-            android:paddingStart="16dp"
+            android:inputType="textPersonName"            android:paddingStart="16dp"
             android:paddingEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -204,7 +203,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/yellow"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_username" />
