--- a/app/src/main/res/layout/edit_food.xml
+++ b/app/src/main/res/layout/edit_food.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0A2342"
+    android:background="@color/blue"
     android:padding="24dp"
     tools:context=".activities.EditFoodActivity">
 
