--- a/app/src/main/res/layout-land/activity_dashboard.xml
+++ b/app/src/main/res/layout-land/activity_dashboard.xml
@@ -8,12 +8,6 @@
     android:background="@color/blue"
     tools:context=".activities.DashboardActivity">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.5" />
-
     <TextView
         android:id="@+id/welcomeTextView"
         android:layout_width="wrap_content"
@@ -24,63 +18,15 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/viewFoodButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="12dp"
-        android:text="@string/view_foodlist"
-        app:layout_constraintBottom_toTopOf="@+id/appointmentButton"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <Button
-        android:id="@+id/medicationButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/medication"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintTop_toTopOf="@+id/viewFoodButton" />
-
-    <Button
-        android:id="@+id/appointmentButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="12dp"
-        android:text="@string/appointment"
-        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewFoodButton" />
-
-    <Button
-        android:id="@+id/scheduleAppointmentButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/schedule_appointment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
-        app:layout_constraintTop_toTopOf="@+id/appointmentButton" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_button_yellow"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@android:color/transparent"
         android:paddingStart="24dp"
         android:paddingTop="12dp"
@@ -89,21 +35,71 @@
         android:text="@string/log_out"
         android:textColor="@color/yellow"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/profiledetails"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/welcomeTextView"
+        app:layout_constraintStart_toStartOf="@+id/welcomeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
         app:strokeColor="@color/yellow"
         app:strokeWidth="2dp" />
 
     <Button
-        android:id="@+id/profiledetails"
+        android:id="@+id/viewFoodButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/view_foodlist"
+        app:layout_constraintBottom_toTopOf="@+id/medicationButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/welcomeTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/medicationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/medication"
+        app:layout_constraintBottom_toTopOf="@+id/appointmentButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/welcomeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/viewFoodButton" />
+
+    <Button
+        android:id="@+id/appointmentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/appointment"
+        app:layout_constraintBottom_toTopOf="@+id/scheduleAppointmentButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/welcomeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/medicationButton" />
+
+    <Button
+        android:id="@+id/scheduleAppointmentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/schedule_appointment"
+        app:layout_constraintBottom_toTopOf="@+id/reviewAppointmentButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/welcomeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/appointmentButton" />
+
+    <Button
+        android:id="@+id/reviewAppointmentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/review"
+        app:layout_constraintBottom_toTopOf="@+id/profiledetails2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/welcomeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/scheduleAppointmentButton" />
+
+    <Button
+        android:id="@+id/profiledetails2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/view_profile_details"
-        app:layout_constraintBottom_toBottomOf="@+id/logoutButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/logoutButton"
-        app:layout_constraintTop_toTopOf="@+id/logoutButton" />
+        app:layout_constraintStart_toEndOf="@id/welcomeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/reviewAppointmentButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
