--- a/app/src/main/res/layout/schedule_appointment.xml
+++ b/app/src/main/res/layout/schedule_appointment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/blue"
     android:padding="16dp"
-    tools:context=".activities.ScheduleAppointmentActivity">
+    tools:context=".activities.Sc">
 
     <TextView
         android:id="@+id/monthTextView"
