--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -33,20 +33,22 @@
     <Button
         android:id="@+id/loginButton"
         android:layout_width="254dp"
-        android:layout_height="64dp"
+        android:layout_height="72dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="52dp"
-        android:background="@color/yellow"
+        android:backgroundTint="@color/yellow"
         android:text="@string/login_button_text"
-        android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:cornerRadius="24dp"
         app:layout_constraintBottom_toTopOf="@id/newToMedicManageTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/newToMedicManageTextView"
@@ -54,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/new_to_medicmanage"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/signUpButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,19 +64,20 @@
 
     <Button
         android:id="@+id/signUpButton"
-        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/yellow"
+        android:backgroundTint="@color/yellow"
         android:text="@string/signup_button_text"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:cornerRadius="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
