--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -135,7 +135,6 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_label"
@@ -162,6 +161,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:layout_weight="1"
         android:backgroundTint="@color/yellow"
         android:padding="16dp"
         android:text="@string/sign_in"
