Add user profile view and update UI icons

--- a/app/src/main/res/layout/appnt_quit_dialog.xml
+++ b/app/src/main/res/layout/appnt_quit_dialog.xml
@@ -35,23 +35,29 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:padding="18dp"
             android:text="@string/no"
             android:textColor="@color/yellow"
+            android:textSize="20sp"
+            app:cornerRadius="24dp"
             app:strokeColor="@color/yellow"
-            android:layout_marginEnd="8dp"
-            app:cornerRadius = "24dp"/>
+            app:strokeWidth="2dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/positiveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/yes"
-            android:backgroundTint="@color/yellow"
-            android:textColor="@color/blue"
             android:layout_marginStart="8dp"
-            app:cornerRadius = "24dp"/>
+            android:layout_weight="1"
+            android:backgroundTint="@color/yellow"
+            android:padding="16dp"
+            android:text="@string/yes"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:cornerRadius="24dp" />
+
     </LinearLayout>
 
 </LinearLayout>
