--- a/app/src/main/res/layout/dashboard_sign_in.xml
+++ b/app/src/main/res/layout/dashboard_sign_in.xml
@@ -135,7 +135,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password_label" />
+        app:layout_constraintTop_toBottomOf="@id/password_label"
+        />
 
     <ImageView
         android:id="@+id/password_toggle"
