--- a/app/src/main/res/layout/appnt_previous_dialog.xml
+++ b/app/src/main/res/layout/appnt_previous_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/blue"
@@ -40,27 +39,18 @@
         app:layout_constraintTop_toBottomOf="@+id/confirmationMessageTextView">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/negativeButton"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_weight="1"
-            android:text="@string/no"
-            android:textColor="@color/yellow"
-            app:strokeColor="@color/yellow"
-            app:cornerRadius = "24dp"/>
-
-        <com.google.android.material.button.MaterialButton
             android:id="@+id/positiveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:backgroundTint="@color/yellow"
-            android:text="@string/yes"
-            android:textColor="@color/blue"
-            app:cornerRadius = "24dp"/>
+            android:padding="12dp"
+            android:text="@string/ok"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:cornerRadius="24dp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
