--- a/app/src/main/res/layout/appnt_schedule.xml
+++ b/app/src/main/res/layout/appnt_schedule.xml
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/quitButton"
+            android:id="@+id/negativeButton"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,12 +80,13 @@
             android:padding="12dp"
             android:text="@string/quit"
             android:textColor="@color/yellow"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            app:cornerRadius="24dp"
             app:strokeColor="@color/yellow"
-            app:cornerRadius = "24dp"/>
+            app:strokeWidth="2dp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/bookButton"
+            android:id="@+id/positiveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -93,10 +94,10 @@
             android:backgroundTint="@color/yellow"
             android:padding="12dp"
             android:text="@string/book"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             app:cornerRadius="24dp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
