--- a/app/src/main/res/layout/custom_spinner_item.xml
+++ b/app/src/main/res/layout/custom_spinner_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@android:id/text1"
     style="?android:attr/spinnerItemStyle"
@@ -10,4 +11,5 @@
     android:textColor="@color/medication_text_color_selector"
     android:textSize="16sp"
     android:padding="8dp"
+    app:cornerRadius = "24dp"
     />
