--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -17,11 +17,11 @@
             android:id="@+id/topHeaderLine"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/yellow"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/yellow"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/logoImageView"
@@ -50,15 +50,14 @@
 
         <ImageView
             android:id="@+id/profileIconImageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginEnd="16dp"
             android:contentDescription="@string/profile_icon_desc"
-            app:tint="@color/yellow"
+            android:src="@drawable/icon_logo"
             app:layout_constraintBottom_toBottomOf="@id/logoImageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/logoImageView"
-            android:src="@drawable/icon_logo" />
+            app:layout_constraintTop_toTopOf="@id/logoImageView" />
 
         <View
             android:id="@+id/bottomHeaderLine"
