--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- Heartbeat Logo -->
+            <!-- logo -->
             <ImageView
                 android:id="@+id/logo_image"
                 android:layout_width="40dp"
