--- a/app/src/main/res/layout/appnt_cancel_dialog.xml
+++ b/app/src/main/res/layout/appnt_cancel_dialog.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="24dp"
+    app:cornerRadius="24dp"
     android:background="@color/blue"
     android:gravity="center">
 
@@ -49,14 +50,15 @@
             android:id="@+id/positiveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:backgroundTint="@color/yellow"
             android:padding="12dp"
-            android:text="@string/yes"
+            android:text="@string/ok"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:cornerRadius="24dp" />
+
     </LinearLayout>
 
 </LinearLayout>
