--- a/app/src/main/res/layout/profile_create.xml
+++ b/app/src/main/res/layout/profile_create.xml
@@ -38,14 +38,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />
 
-        <!-- User Type Selection -->
         <RadioGroup
             android:id="@+id/user_type_group"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="32dp"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +64,7 @@
                 android:textSize="20sp" />
 
             <RadioButton
-                android:id="@+id/admin_radio_btn"
+                android:id="@+id/nurse_radio_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
