--- a/app/src/main/res/layout/dashboard_sign_in.xml
+++ b/app/src/main/res/layout/dashboard_sign_in.xml
@@ -100,6 +100,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/btn_white_rounded"
+        android:hint="@string/username"
         android:inputType="text"
         android:padding="12dp"
         android:textSize="20sp"
@@ -130,6 +131,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/btn_white_rounded"
+        android:hint="@string/Password"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textSize="20sp"
