--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,17 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.medmanage.ui.home.HomeFragment"
+        android:name="com.example.medmanage.ui.home.home_fragment"
         android:label="@string/Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+    <action
+        android:id="@+id/action_home_to_medication"
+        app:destination="@id/action_home_to_medication"/>
+
+    <action
+        android:id="@+id/action_home_to_foodlist"
+        app:destination="@id/action_home_to_foodlist"/>
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_schedule"
