--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/blue"
     android:orientation="vertical"
-    android:padding="4dp"
+    android:paddingStart="4dp"
+    android:paddingEnd="4dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="4dp"
     tools:context=".ui.home.home_fragment">
 
-    <!-- Medication Card -->
-
-    <!-- Food List Card -->
     <androidx.cardview.widget.CardView
         android:id="@+id/view_medication"
         android:layout_width="match_parent"
@@ -21,19 +21,19 @@
         android:focusable="true"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="24dp"
-        app:cardElevation="0dp"
-        app:cardPreventCornerOverlap="false">
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="351dp"
+            android:layout_height="556dp"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="2dp">
 
             <ImageView
                 android:layout_width="280dp"
-                android:layout_height="280dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
                 android:contentDescription="@string/view_available_medication"
                 android:scaleType="fitCenter"
                 android:src="@drawable/view_medication" />
@@ -57,21 +57,22 @@
         android:layout_weight="1"
         android:clickable="true"
         android:focusable="true"
+        android:layout_marginTop="2dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="24dp"
-        app:cardElevation="0dp"
-        app:cardPreventCornerOverlap="false">
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="321dp"
+            android:layout_height="248dp"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="2dp">
 
             <ImageView
                 android:layout_width="280dp"
-                android:layout_height="280dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
                 android:contentDescription="@string/view_foodlist"
                 android:scaleType="fitCenter"
                 android:src="@drawable/view_food_list" />
@@ -89,4 +90,3 @@
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
-
