--- a/app/src/main/res/layout/fragment_schedule_nurse.xml
+++ b/app/src/main/res/layout/fragment_schedule_nurse.xml
@@ -13,7 +13,7 @@
     tools:context=".ui.home.home_fragment">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/view_medication"
+        android:id="@+id/view_Appnt"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -34,17 +34,17 @@
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:contentDescription="@string/view_available_medication"
+                android:contentDescription="@string/view_appointments"
                 android:scaleType="fitCenter"
                 android:foreground="?attr/selectableItemBackground"
-                android:src="@drawable/view_medication" />
+                android:src="@drawable/view_appnt_nur" />
 
             <TextView
                 android:id="@+id/medication_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/view_available_medication"
+                android:text="@string/view_appointments"
                 android:textColor="@color/yellow"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -74,17 +74,17 @@
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:contentDescription="@string/view_foodlist"
+                android:contentDescription="@string/review_appointment"
                 android:scaleType="fitCenter"
-                android:src="@drawable/view_food_list"
+                android:src="@drawable/review_appnt"
                 android:foreground="?attr/selectableItemBackground"/>
 
             <TextView
-                android:id="@+id/food_list_text"
+                android:id="@+id/review_appnt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/view_foodlist"
+                android:text="@string/review_appointment"
                 android:textColor="@color/yellow"
                 android:textSize="18sp"
                 android:textStyle="bold" />
